FIXED: Corrected spacing

--- a/scss/GridField.scss
+++ b/scss/GridField.scss
@@ -80,7 +80,7 @@ $gf_grid_x:	16px;
 			.pagination-records-number
 			{
 				font-size: 1.0em;
-				padding: 6px 7px 6px 0;
+				padding: 6px 3px 6px 0;
 				color: $color-text-light;
 				@include single-text-shadow($gf_colour_text_shadow, 0px, -1px, 0);
 				font-weight: normal;
